--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,6 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.boxed-container {
+  @apply max-w-[1200px] mx-auto;
 }
